# radiology-rag

./: .dockerignore  .env.example  .env.local.example  .env.production  .env.production.example  .env.replit  .env.supabase.example  .gitignore  .replit  AUTHENTICATION.md  AUTHENTICATION_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_8GB_FIX.md  DEPLOYMENT_CACHE_FIX.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_CONFIG.md  DEPLOYMENT_FIX.md  DEPLOYMENT_FIXES.md  DEPLOYMENT_FREE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_QUICKSTART.md  DEPLOYMENT_READY.md  DEPLOY_FREE.md  DEPLOY_REPLIT.md  FEATURES_ANALYSIS.md  FUTURE_FEATURES.md  LLM_FALLBACK_GUIDE.md  LOCAL_DEVELOPMENT.md  LOGIN_CREDENTIALS.md  MIGRATION_GUIDE.md  MINIMAL_DEPLOYMENT.md  OPTIONAL_FEATURES.md  PASSWORD_FIX_README.md  PRODUCTION_SETUP.md  QUICK_DEPLOY_GUIDE.md  QUICK_START.md  QUICK_START_PRODUCTION.md  RAG_ENABLED_SETUP.md  README.md  READY_TO_DEPLOY.md  (+24 more)
.gcp/: cloudbuild.yaml
backend/: BACKUP_DISASTER_RECOVERY.md  CRITICAL_FINDINGS_SETUP.md  DICOM_INTEGRATION_SETUP.md  Dockerfile  RAG_SETUP.md  VOICE_DICTATION_SETUP.md  ai_analysis_service.py  auth.py  auth_routes.py  auth_schemas.py  backup_service.py  cache_service.py  config.py  critical_findings_detector.py  database.py  dicom_service.py  document_generator.py  fix_passwords.py  init_db.py  init_supabase_db.py  llm_service.py  load_docx_templates.py  main.py  main.py.backup  migrate_add_medical_field.py  migrate_critical_notifications.py  migrate_db.py  migrate_db.sql  migrate_reports.py  migrate_sqlite_to_supabase.py  models.py  models.py.backup  notification_service.py  (+17 more)
(+64 files in other folders)
